--- a/blackgoose.html
+++ b/blackgoose.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <img src="blackgoose.jpg" alt="Black Goose Bistro Logo">
+    <img src="blackgoose.jpeg" alt="Black Goose Bistro Logo">
     <h1>Black Goose Bistro</h1>
     <h2>The Restaurant</h2>
     <p>The Black Goose Bistro offers casual lunch and dinner fare in a relaxed atmosphere. The menu changes regularly to highlight the freshest local ingredients.</p>
